<resources>
    <string name="app_name">GIG History</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="section_b_q_a"><![CDATA[Theory Q&A]]></string>
    <string name="take_objective_test">Objective Test</string>
    <string name="wassce_theory_textbook">History Notes</string>
    <string name="history_dictionary">History Dictionary</string>
    <string name="dictionary">Dictionary</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_up">SIGN UP</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_valid_email">Enter a valid email</string>
    <string name="enter_email">Enter your email</string>
    <string name="enter_password">Enter you password</string>
    <string name="enter_f_name">Enter your name</string>
    <string name="confirm_pass">Confirm your password. They do not match</string>
    <string name="enter_last_name">Enter your last name</string>
    <string name="submit">Submit</string>
    <string name="search">Search</string>
    <string name="status">Status</string>
    <string name="ans">Ans</string>
    <string name="my_ans">My Ans</string>
    <string name="details">Details</string>
    <string name="share">Share</string>
    <string name="more">More</string>
    <string name="home">Home</string>
    <string name="select_number_of_questions">Select number of questions</string>
    <string name="custom">Custom</string>
    <string name="enter_custom_time">Enter custom time</string>
    <string name="enter_custom_number">Enter custom number</string>
    <string name="select_exam_duration">Select exam duration</string>
    <string name="time_left">Time Left</string>
    <string name="next">Next</string>
    <string name="submitted">Submitted</string>
    <string name="previous">Previous</string>
    <string name="go_to">Go to</string>
    <string name="exam">Exam</string>
    <string name="go">Go</string>
    <string name="enter_question_number">Enter Question Number</string>
    <string name="suggested_answers">Suggested Answers</string>
    <string name="view_answers">View Answers</string>
    <string name="summary">Summary</string>
    <string name="performance">Performance</string>
    <string name="number">Number</string>
    <string name="total_number_of_questions">Total Number of Questions</string>
    <string name="you_scored">You Scored</string>
    <string name="you_skipped">You Skipped</string>
    <string name="you_attempted">You Attempted</string>
    <string name="percentage">Percentage</string>
    <string name="grade">Grade</string>
    <string name="view_summary">View Summary</string>
    <string name="supply_your_answer_here_answers_will_not_be_marked">Supply your answer here (Answers will not be marked)</string>
    <string name="endWithoutSubmitting">Do you want to end your exam without submitting?</string>
    <string name="exitApp">Do you want to exit</string>
    <string name="noNotes">No notes found</string>
    <string name="hint">Hint</string>
    <string name="cat2">Word Scramble</string>
    <string name="cat3">Define Quiz</string>
    <string name="cat1">Objective Quiz</string>
    <string name="cat4">Horde</string>
    <string name="cat5">Missing Letters</string>
    <string name="back">Back</string>
    <string name="gotopage">Goto</string>
    <string name="ok">OK</string>
    <string name="answer">ANSWER :</string>
    <string name="question">Question :</string>
    <string name="readMore">We know you can do better</string>
    <string name="defineQuiz">Define Quiz</string>
    <string name="user_s_opinion">User\'s Opinion</string>
    <string name="select_your_school">Select your school</string>
    <string name="selectgender">Select your Gender</string>
    <string name="selectGrade">Select your grade</string>
    <string name="selectSchool">Select your School</string>
    <string name="name">Name</string>
    <string name="enter_phone">Enter your phone number</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="today">Today</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
</resources>