<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Summary">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">
        <TableLayout
            android:orientation="vertical"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#51B435"
                android:padding="10dp"
                app:layout_constraintTop_toBottomOf="@+id/tabSettings">

                <TextView
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/performance" />

                <TextView
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/number" />


            </TableRow>
            <TableRow android:background="@color/tableColor" android:padding="5dp"
                >
                <TextView
                    android:textSize="16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/total_number_of_questions" />
                <TextView
                    android:textSize="16sp"
                    android:textAlignment="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/txtTotal"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                     />


            </TableRow>
            <TableRow android:background="@color/tableColor" android:padding="5dp">
                <TextView
                    android:textSize="16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/you_scored" />
                <TextView
                    android:textSize="16sp"
                    android:textAlignment="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/txtScore"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                     />


            </TableRow>

            <TableRow android:background="@color/tableColor" android:padding="5dp">
                <TextView
                    android:textSize="16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/grade" />
                <TextView
                    android:textSize="16sp"
                    android:textAlignment="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/txtGrade"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    />


            </TableRow>

            <TableRow android:background="@color/tableColor" android:padding="5dp">
                <TextView
                    android:textSize="16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/percentage" />
                <TextView
                    android:textSize="16sp"
                    android:textAlignment="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/txtPercentage"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    />


            </TableRow>
            <TableRow android:background="@color/tableColor" android:padding="5dp">
                <TextView
                    android:textSize="16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/you_attempted" />
                <TextView
                    android:textSize="16sp"
                    android:textAlignment="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/txtAttempted"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                     />


            </TableRow>
            <TableRow android:background="@color/tableColor" android:padding="5dp">
                <TextView
                    android:textSize="16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/you_skipped" />
                <TextView
                    android:textSize="16sp"
                    android:textAlignment="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/txtSkipped"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                     />


            </TableRow>
        </TableLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>