<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:background="@color/yellow_100"
        android:id="@+id/tabSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:textColor="@color/white"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:id="@+id/txtTopic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/take_objective_test"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>

    <TextView
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:id="@+id/numQuestions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/select_number_of_questions"
        app:layout_constraintTop_toBottomOf="@+id/tabSettings" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/numQuestions"
        tools:layout_editor_absoluteX="5dp">

        <RadioButton
            android:checked="true"
            android:id="@+id/radio1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="15" />

        <RadioButton
            android:id="@+id/radio2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="30" />

        <RadioButton
            android:id="@+id/radio3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="40" />

        <RadioButton
            android:id="@+id/radio4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="50" />

    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:visibility="gone"
        android:id="@+id/textInputNum"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        app:layout_constraintDimensionRatio="3:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup">

        <com.google.android.material.textfield.TextInputEditText
            android:inputType="number"
            android:maxLength="3"
            android:id="@+id/edtCustomNum"
            android:text="15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_custom_number" />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_marginTop="10dp"
        android:id="@+id/numTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_exam_duration"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/textInputNum" />

    <RadioGroup
        android:id="@+id/radioGroupTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/numTime"
        tools:layout_editor_absoluteX="5dp">

        <RadioButton
            android:checked="true"
            android:id="@+id/radioT1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="15mins" />

        <RadioButton
            android:id="@+id/radioT2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="30mins" />

        <RadioButton
            android:id="@+id/radioT3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="60mins" />

        <RadioButton
            android:id="@+id/radioT4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/custom" />

    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:visibility="gone"
        android:id="@+id/textInputTime"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        app:layout_constraintDimensionRatio="1:1"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupTime">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtCustomHr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="2"
            android:hint="Hr" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:visibility="gone"
        android:id="@+id/textInputMin"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        app:layout_constraintDimensionRatio="1.5:1"
        app:layout_constraintStart_toEndOf="@+id/textInputTime"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupTime">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtCustomTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="2"
            android:text="15"
            android:hint="Min" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=":"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textInputMin"
        app:layout_constraintEnd_toStartOf="@+id/textInputMin"
        app:layout_constraintStart_toEndOf="@+id/textInputTime"
        app:layout_constraintTop_toTopOf="@+id/textInputMin" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/submit"
        app:layout_constraintTop_toBottomOf="@+id/textInputTime" />


</androidx.constraintlayout.widget.ConstraintLayout>